# NuoYan_Skill

./: .gitignore  CHANGELOG_V2.0_20260616.md  README.md  SKILL.md  install-windows.ps1  pyproject.toml
.github/workflows/: ci.yml
agents/: openai.yaml
assets/styles/: report.css
assets/templates/: evidence-card.md  feasibility-report.html  materials-report.html  review-workbook-layout.md  standard-delivery-report.html
audit/: v2.1.11-live-validation.md
docs/: windows-standard-environment.md
references/: actions.md  browser-workflow.md  cli-contract.md  evidence-rules.md  life-science-research-workflow.md  patenthub-source-evaluation-20260717.md  report-rules.md  scenarios.md  source-sites-v21.json  taxonomy.md  troubleshooting.md  workflow.md
scripts/ivd_research/: __init__.py  actions.py  browser_collect.py  browser_session.py  browser_workflows.py  cli.py  confirmations.py  constants.py  doctor.py  evidence.py  import_finding.py  jsonl.py  local_import.py  models.py  package.py  paths.py  project_profile.py  project_relevance.py  quality.py  query_plan.py  reports.py  review_excel.py  site_profiles.py  source_quality.py  staging.py  status.py  translation.py
scripts/tests/: test_confirmation_prompts.py  test_doctor.py  test_life_science_research_bridge.py  test_literature_graph.py  test_literature_profiles.py  test_live_public_literature_e2e.py  test_material_recording.py  test_metric_fact_extractor.py  test_openalex_literature.py  test_package_verification.py  test_patenthub_patents.py  test_project_profile.py  test_project_relevance.py  (+10 more)
(+31 files in other folders)
